horizontal scroll issue and about section modified

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+body{
+  overflow-x: hidden;
+}
+
 .App {
     font-family: "Poppins", "Arial", "Helvetica", sans-serif;
   }
